--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-sonarjs": "^0.10.0",
     "eslint-plugin-unicorn": "^36.0.0",
     "jest": "^27.2.5",
+    "msw": "^0.35.0",
     "prettier": "2.4.1",
     "rollup": "^2.58.0",
     "rollup-plugin-dts": "^4.0.0",
