--- a/package.json
+++ b/package.json
@@ -18,13 +18,21 @@
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
+  "dependencies": {
+    "form-data": "^4.0.0",
+    "isomorphic-unfetch": "^3.1.0",
+    "urlcat": "^2.0.4"
+  },
   "devDependencies": {
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
     "@size-limit/preset-small-lib": "^6.0.1",
     "@types/faker": "^5.5.8",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "cz-conventional-changelog": "^3.3.0",
     "esbuild": "^0.13.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -34,9 +42,11 @@
     "eslint-plugin-sonarjs": "^0.10.0",
     "eslint-plugin-unicorn": "^36.0.0",
     "faker": "^5.5.3",
+    "husky": "^4.3.8",
     "jest": "^27.2.5",
     "msw": "^0.35.0",
     "prettier": "2.4.1",
+    "pretty-quick": "^3.1.1",
     "rollup": "^2.58.0",
     "rollup-plugin-dts": "^4.0.0",
     "rollup-plugin-esbuild": "^4.5.0",
@@ -50,9 +60,15 @@
       "path": "dist/psn-api.js"
     }
   ],
-  "dependencies": {
-    "form-data": "^4.0.0",
-    "isomorphic-unfetch": "^3.1.0",
-    "urlcat": "^2.0.4"
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && npm run lint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
