--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "Wes Copeland",
   "license": "MIT",
   "scripts": {
+    "preversion": "npm run format && npm run build",
+    "prepublishOnly": "npm run format && npm run test && npm run build",
     "dev": "ts-node-dev --respawn --clear --quiet src/__dev-playground.ts",
     "build": "rollup -c",
     "format": "prettier --write . '**/*.{json,md,js,ts,tsx}'",
@@ -72,6 +74,12 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "release": {
+    "branches": [
+      "master",
+      "next"
+    ]
   },
   "repository": {
     "type": "git",
