--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,10 @@
     "forceConsistentCasingInFileNames": true,
     // `dts build` ignores this option, but it is commonly used when type-checking separately with `tsc`
     "noEmit": true
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
   }
 }
