--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
+    "@rollup/plugin-alias": "^3.1.8",
     "@size-limit/preset-small-lib": "^6.0.3",
     "@types/faker": "^5.5.9",
     "@types/jest": "^27.0.2",
