--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "format:check": "prettier --check . '**/*.{json,md,js,ts,tsx}'",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "lint:fix": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx . --fix",
-    "test": "dts test",
-    "test:coverage": "dts test --coverage",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "verify": "npm run format:check && npm run lint && npm run test:coverage && npm run build && npm run size",
     "size": "size-limit",
     "analyze": "size-limit --why",
@@ -53,11 +53,13 @@
     "eslint-plugin-unicorn": "^36.0.0",
     "faker": "^5.5.3",
     "husky": "^4.3.8",
+    "jest": "^27.3.1",
     "msw": "^0.35.0",
     "prettier": "2.4.1",
     "pretty-quick": "^3.1.1",
     "semantic-release": "^18.0.0",
     "size-limit": "^6.0.4",
+    "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
