ci: start working on health checks

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "dev": "dts watch",
-    "playground": "ts-node-dev --respawn -r tsconfig-paths/register src/__playground.ts",
+    "playground": "dotenv-flow ts-node-dev --respawn -r tsconfig-paths/register src/__playground.ts",
     "build": "dts build",
     "prepare": "dts build",
     "format": "prettier --write . '**/*.{json,md,js,ts,tsx}'",
@@ -21,8 +21,9 @@
     "format:check": "prettier --check . '**/*.{json,md,js,ts,tsx}'",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "lint:fix": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx . --fix",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
+    "test": "jest --selectProjects UNIT",
+    "test:coverage": "jest --selectProjects UNIT --coverage",
+    "test:e2e": "dotenv-flow jest -- --selectProjects E2E",
     "verify": "npm run format:check && npm run lint && npm run test:coverage && npm run build && npm run size",
     "size": "size-limit",
     "analyze": "size-limit --why",
@@ -43,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv-flow-cli": "^1.0.0",
     "dts-cli": "^0.19.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -57,6 +59,7 @@
     "msw": "^0.35.0",
     "prettier": "2.4.1",
     "pretty-quick": "^3.1.1",
+    "redis": "^4.0.0-rc.3",
     "semantic-release": "^18.0.0",
     "size-limit": "^6.0.4",
     "ts-jest": "^27.0.7",
