ci: update health check env vars

--- a/.github/workflows/get-title-trophies.yml
+++ b/.github/workflows/get-title-trophies.yml
@@ -19,3 +19,6 @@ jobs:
 
       - name: Run health check
         run: yarn test:e2e --testPathPattern=getTitleTrophies
+        env:
+          NPSSO: ${{ secrets.NPSSO }}
+          REDIS_URL: ${{ secrets.REDIS_URL }}
