--- a/package.json
+++ b/package.json
@@ -49,37 +49,34 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@digitak/esrun": "^3.2.13",
-    "@rollup/plugin-alias": "^3.1.9",
-    "@size-limit/preset-small-lib": "^6.0.4",
-    "@skypack/package-check": "^0.2.2",
-    "@types/faker": "^5.5.9",
+    "@faker-js/faker": "^7.6.0",
+    "@size-limit/preset-small-lib": "^8.1.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.45",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv-flow-cli": "^1.0.0",
-    "dts-cli": "^0.19.7",
-    "eslint": "^8.20.0",
+    "dts-cli": "^1.6.0",
+    "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-sonarjs": "^0.10.0",
-    "eslint-plugin-unicorn": "^38.0.1",
-    "faker": "^5.5.3",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-sonarjs": "^0.16.0",
+    "eslint-plugin-unicorn": "^44.0.2",
     "husky": "^4.3.8",
-    "jest": "^27.5.1",
-    "msw": "^0.35.0",
-    "prettier": "2.4.1",
+    "jest": "^29.2.1",
+    "msw": "^0.47.4",
+    "prettier": "2.7.1",
     "pretty-quick": "^3.1.3",
-    "redis": "^4.0.0-rc.3",
-    "semantic-release": "^19.0.3",
-    "size-limit": "^6.0.4",
-    "ts-jest": "^27.1.5",
+    "redis": "^4.3.1",
+    "semantic-release": "^19.0.5",
+    "size-limit": "^8.1.0",
+    "ts-jest": "^29.0.3",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
