--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "lint:fix": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx . --fix",
     "test": "jest --selectProjects UNIT",
     "test:coverage": "jest --selectProjects UNIT --coverage",
-    "test:e2e": "dotenv-flow jest -- --selectProjects E2E --forceExit",
     "verify": "npm run format:check && npm run lint && npm run test:coverage && npm run build && npm run size",
     "size": "size-limit",
     "analyze": "size-limit --why",
@@ -70,10 +69,9 @@
     "eslint-plugin-unicorn": "^44.0.2",
     "husky": "^4.3.8",
     "jest": "^29.4.1",
-    "msw": "^0.47.4",
+    "msw": "^1.1.0",
     "prettier": "2.7.1",
     "pretty-quick": "^3.1.3",
-    "redis": "^4.6.4",
     "semantic-release": "^19.0.5",
     "size-limit": "^8.1.2",
     "ts-jest": "^29.0.5",
@@ -112,5 +110,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/achievements-app/psn-api.git"
+  },
+  "resolutions": {
+    "rxjs": "^6.6.0"
   }
 }
