--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "ps4",
     "ps5"
   ],
+  "engines": {
+    "node": ">=20"
+  },
   "version": "0.0.0-development",
   "main": "dist/index.js",
   "module": "dist/psn-api.esm.js",
