--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "isomorphic-unfetch": "^3.1.0"
+    "isomorphic-unfetch": "^3.1.0",
+    "nock": "^14.0.4"
   },
   "peerDependencies": {},
   "devDependencies": {
@@ -73,7 +74,6 @@
     "eslint-plugin-unicorn": "^44.0.2",
     "husky": "^4.3.8",
     "jest": "^29.4.1",
-    "msw": "^1.1.0",
     "prettier": "2.7.1",
     "pretty-quick": "^3.1.3",
     "semantic-release": "^19.0.5",
