--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,22 +2,16 @@ name: CI
 on: [push, pull_request]
 jobs:
   build:
-    name: Build, lint, and test on Node ${{ matrix.node }} and ${{ matrix.os }}
-
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        node: ["16.x"]
-        os: [ubuntu-latest, macOS-latest]
-
+    name: Build, lint, and test
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Use Node ${{ matrix.node }}
-        uses: actions/setup-node@v1
+      - name: Use Node 20
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 20
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
