--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ps5"
   ],
   "engines": {
-    "node": ">=20"
+    "node": ">=20",
+    "pnpm": ">=10"
   },
   "version": "0.0.0-development",
   "main": "dist/index.js",
