--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -1,4 +1,5 @@
 name: size
+
 on: [pull_request]
 
 jobs:
@@ -7,7 +8,22 @@ jobs:
     env:
       CI_JOB_NUMBER: 1
     steps:
-      - uses: actions/checkout@v3
-      - uses: andresz1/size-limit-action@v1
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
+      - name: Use Node 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Analyze bundle sizes
+        uses: andresz1/size-limit-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
