--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "isomorphic-unfetch": "^3.1.0",
-    "nock": "^14.0.4"
+    "isomorphic-unfetch": "^3.1.0"
   },
   "peerDependencies": {},
   "devDependencies": {
@@ -75,6 +74,7 @@
     "eslint-plugin-unicorn": "^44.0.2",
     "husky": "^4.3.8",
     "jest": "^29.4.1",
+    "nock": "^14.0.4",
     "prettier": "2.7.1",
     "pretty-quick": "^3.1.3",
     "semantic-release": "^19.0.5",
